yd-tools (@version) @serie; urgency=medium
  * Changes:
    - Fixes for resize behaviour in dialogues

 -- Sly_tom_cat <slytomcat@mail.ru>  @date